--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,14 @@
     <h1>{% block title %} Estimator {% endblock %}</h1>
     <form action="" method="get">
         <input type="text" name="celsius" />
+        <input type="text" name="item2" />
+        <input type="text" name="item2" />
+        <label for="housetype">Type of house:</label>
+        <select id="housetype" name="housetype">
+            <option value="flat">flat</option>
+            <option value="terrace">terrace</option>
+            <option value="semi-detached">semi-detached</option>
+            <option value="detached">detached</option>
         <input type="submit" value="Convert" />
     </form>
     <h3>Estimated Cost: {% if fahrenheit %} £ {% endif %} {{fahrenheit}}</h3>
