--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,16 +3,41 @@
 {% block content %}
     <h1>{% block title %} Estimator {% endblock %}</h1>
     <form action="" method="get">
-        <input type="text" name="celsius" />
-        <input type="text" name="item2" />
-        <input type="text" name="item2" />
-        <label for="housetype">Type of house:</label>
+        <label for="date">Date (yyyy/mm/dd):</label>
+        <input type="text" name="date" />
+        
+        <label for="postcode">Postcode:</label>
+        <input type="text" name="postcode" />
+        
+        <br>
+        <label for="housetype">Type of House:</label>        
         <select id="housetype" name="housetype">
             <option value="flat">flat</option>
             <option value="terrace">terrace</option>
             <option value="semi-detached">semi-detached</option>
             <option value="detached">detached</option>
+        </select>
+
+        <label for="newbuild">New Build:</label>
+        <select id="newbuild" name="newbuild">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+        </select>
+
+        <label for="estatetype">Estate Type:</label>
+        <select id="estatetype" name="estatetype">
+            <option value="type1">type1</option>
+            <option value="type2">type2</option>
+            <option value="type3">type3</option>
+        </select>
+
+        <label for="transactiontype">Transaction Type:</label>
+        <select id="transactiontype" name="transactiontype">
+            <option value="type1">type1</option>
+            <option value="type2">type2</option>
+            <option value="type3">type3</option>
+        </select>
         <input type="submit" value="Convert" />
     </form>
-    <h3>Estimated Cost: {% if fahrenheit %} £ {% endif %} {{fahrenheit}}</h3>
+    <h3>{{stringOut}}</h3>
 {% endblock %}
