--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,34 +1,46 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>housepricer - {% block title %} {% endblock %}</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
+
+    <!-- FontAwesome icon library -->
+    <script src="https://kit.fontawesome.com/8a3d76a02a.js" crossorigin="anonymous"></script>
+
     <!--Java Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
-      <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}" />
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/reset-only.css') }}" />
-      -->
-
-    <title>housepricer - {% block title %} {% endblock %}</title>
   </head>
   <body>
     <!--Nav bar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Housepricer</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">   
+          <i class="fas fa-solid fa-house-chimney fa-2x fa-flip-horizontal"></i>          
+          <span class="baloo-2-bold" style="font-size:42px; margin-left: -5px;">
+            ousepricer
+          </span>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="{{ url_for('about') }}">About</a>
-
+            <a class="nav-link" href="{{ url_for('about') }}">
+              <h3>about</h3>
+            </a>
           </div>
         </div>
       </div>
